--- a/templates/all-organisers.html
+++ b/templates/all-organisers.html
@@ -33,7 +33,7 @@
         <h5>
           Email: <a href="mailto: {{organiser.email}}">{{organiser.email}}</a>
         </h5>
-        <h5>Mobile: {{organiser.number}}</h5>
+        <h5>Mobile: {{organiser.mobile}}</h5>
         <h5>
           Facebook:
           <a href="{{organiser.facebook}}" target="_blank"
@@ -44,7 +44,7 @@
         <div class="row">
           {% for event in events %} {% if event.username == organiser.username
           %}
-          <div class="col s12 m6 l4">
+          <div class="col s12 m6 l6 xl4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img
@@ -96,7 +96,7 @@
                   {{event.event_name}}
                 </h4>
                 <div class="row">
-                  <p class="col s4"><em> Description:</em></p>
+                  <p class="col s4"><em> About:</em></p>
                   <p class="col s8">
                     {{event.event_description}}
                   </p>
