--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
   <div class="container">
     <div class="row">
       {% for event in events %}
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l6 xl4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
             <img
