--- a/templates/salsa.html
+++ b/templates/salsa.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     {% for event in events%} {% if event.salsa == 'on' %}
-    <div class="col s12 m6 l4">
+    <div class="col s12 m6 l6 xl4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img
@@ -52,7 +52,7 @@
             {{event.event_name}}
           </h4>
           <div class="row">
-            <p class="col s4"><em> Description:</em></p>
+            <p class="col s4"><em> About:</em></p>
             <p class="col s8">
               {{event.event_description}}
             </p>
