--- a/templates/all-organisers.html
+++ b/templates/all-organisers.html
@@ -56,7 +56,9 @@
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">
                   <h5>{{event.event_name}}</h5>
-                  <h5><strong>{{event.weekday}}:</strong> {{event.time}}</h5>
+                  <h5>{{event.city}}, {{event.country}}</h5>
+                  <strong>{{event.weekday}}:</strong> {{event.time}}
+                  <br />
                   <strong>
                     Dance Styles:
                   </strong>
@@ -75,7 +77,7 @@
                   ></span
                 >
                 <p>
-                  <a href="https://{{event.event_link}}" target="_blank"
+                  <a href="{{event.event_link}}" target="_blank"
                     >See event</a
                   >
                 </p>
@@ -110,7 +112,7 @@
                 <div class="row">
                   <p class="col s4"><em> Address:</em></p>
                   <p class="col s8">
-                    {{event.address}}
+                    {{event.address}}, {{event.city}}, {{event.country}}
                   </p>
                 </div>
                 <div class="row">
