--- a/templates/kizomba.html
+++ b/templates/kizomba.html
@@ -14,6 +14,7 @@
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">
             <h5>{{event.event_name}}</h5>
+            <h5>{{event.city}}, {{event.country}}</h5>
             <strong>{{event.weekday}}:</strong> {{event.time}}
             <br />
             <strong>
@@ -33,7 +34,7 @@
             ></span
           >
           <p>
-            <a href="https://{{event.event_link}}" target="_blank">See event</a>
+            <a href="{{event.event_link}}" target="_blank">See event</a>
           </p>
         </div>
         <div
@@ -66,7 +67,7 @@
           <div class="row">
             <p class="col s4"><em> Address:</em></p>
             <p class="col s8">
-              {{event.address}}
+              {{event.address}}, {{event.city}}, {{event.country}}
             </p>
           </div>
           <div class="row">
