Added geolocation api. Removed empty values from signup form. Fixed style.html salsa background not rendering. removed wtforms from app.py.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -190,7 +190,7 @@ ul {
       rgba(0, 0, 0, 0.7) 0%,
       rgba(0, 0, 0, 0.7) 100%
     ),
-    url("../images/adrian-y-anita-1.jpg");
+    url("https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/adrian-y-anita-1.jpg");
   background-color: #cccccc;
   background-position: center;
   background-repeat: no-repeat;
