--- a/templates/salsa.html
+++ b/templates/salsa.html
@@ -44,7 +44,7 @@
       rgba(0, 0, 0, 0.7) 0%,
       rgba(0, 0, 0, 0.7) 100%
     ),
-    url(https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/{{event.event_image}});"
+    url('https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/{{event.event_image}}');"
         >
           <span class="card-title">
             <i class="material-icons right">close</i>
