--- a/templates/kizomba.html
+++ b/templates/kizomba.html
@@ -1,5 +1,34 @@
 {% extends 'base.html' %} {% block content %}
 <div class="container">
+  <form
+    action="{{url_for('filtered_kizomba')}}"
+    method="POST"
+    class="col s12"
+    id="add-event"
+    enctype="multipart/form-data"
+  >
+    <div class="row">
+      <div class="input-field col s12 m6">
+        <select name="country" id="country">
+          <option disabled selected>Please select a country</option>
+          {% for country in countries %}
+          <option value="{{country.country_name}}"
+            >{{country.country_name}}</option
+          >
+          {% endfor %}
+        </select>
+        <label>Country</label>
+      </div>
+      <button
+        class="btn waves-effect waves-light purple darken-3"
+        type="submit"
+      >
+        Search
+        <i class="material-icons right">search</i>
+      </button>
+    </div>
+  </form>
+  <h1 class="center">{{country}}</h1>
   <div class="row">
     {% for event in events%} {% if event.kizomba == 'on' %}
     <div class="col s12 m6 l6 xl4">
