added geolocation for edit event following successful testing in add event yesterday. added preliminary map in index, ready for api key and loop through event geolocation for markers

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,6 +23,11 @@ body {
   margin: 0 10px;
 }
 
+#map {
+  height: 400px;
+  width: 100%
+}
+
 .contact-form input, .contact-form textarea {
   color: white
 }
