--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,10 @@
         emailjs.init("user_ZQ0HbGkCFOUEs2t4X7Yo9");
       })();
 	</script>
+  <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
 	<title>Dance Your Way</title>
 </head>
 
