added google map with markers iterating through mongodb collection. placeholder europe view comment ready. google api restricted to local port

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
       })();
 	</script>
   <script
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCWZTBCpz1s2iN98QZxLZd_pBmYWWu1kUs&callback=initMap&libraries=&v=weekly"
       defer
     ></script>
 	<title>Dance Your Way</title>
