added google map for filtered index function. geocode now draws city and country for more accurate API requests. pins set on map with event information within infowindow successfully. map set to Europe defauly. Selected country from search appears in title

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,6 +89,10 @@ body {
   height: 520px;
 }
 
+.smallcard {
+  height: 100%;
+}
+
 .card i {
   line-height: 40px !important;
 }
@@ -102,6 +106,13 @@ body {
   width: auto;
   object-fit: cover;
 }
+
+.smallcard-image img {
+  width: 80%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .card-content {
   padding: 0 24px 24px 24px !important;
 }
