Changed AWS Key. Info button tested on event card in account.html. Infowindow google view height adjusted in style.css, text margin adjusted for event name and address included

--- a/templates/account.html
+++ b/templates/account.html
@@ -203,7 +203,7 @@
                   </ul>
                   <a
                     class="btn-floating halfway-fab waves-effect waves-light red"
-                    ><i class="material-icons right">add</i></a
+                    ><i class="material-icons right">info</i></a
                   ></span
                 >
                 <p>
