--- a/templates/index.html
+++ b/templates/index.html
@@ -185,9 +185,10 @@
               '<img src="https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/{{item.event_image}}" alt="{{item.event_name}} event image" />'+
             '</div>'+
             '<div class="col s6 center">'+
-              '<h5>{{item.event_name}}</h5>'+
+              '<h5 style="margin-top: 0px; margin-bottom: 0px;">{{item.event_name}}</h5>'+
               '<p><strong>{{item.weekday}}</strong></p>'+
               '<p><strong>{{item.time}}</strong></p>'+
+              '<p><strong>{{item.address}}</strong></p>'+
               '<ul>'+
                 '{% if item.salsa == 'on' %}'+
                 '<li>Salsa</li>'+
