--- a/static/css/style.css
+++ b/static/css/style.css
@@ -107,8 +107,12 @@ body {
   object-fit: cover;
 }
 
+.smallcard-image {
+  height: 175px
+}
+
 .smallcard-image img {
-  width: 80%;
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
